fix js tree display for big children count (bottom elements were not visible)

--- a/src/Pim/Bundle/UIBundle/Resources/public/css/pim.less
+++ b/src/Pim/Bundle/UIBundle/Resources/public/css/pim.less
@@ -1774,3 +1774,8 @@ h3.tab-header {
 .scopable-input .note-editor {
   display: inline-block;
 }
+
+ // custom fix: allow to display correctly tree with large children count 
+.jstree > ul > li:last-child { 
+  padding-bottom: 80px ;
+}
